--- a/HTML Basics/notes.html
+++ b/HTML Basics/notes.html
@@ -4,19 +4,25 @@
     <title>HTML Basics. Summary.</title>
   </head>
   <body>
-    <h1>The World Wide Web</h1>
-    <p>
-      The web is composed largely of <b>HTML</b> documents. HTML stands for <em>HyperText Markup Language</em> and is the language the browsers use to interpret web pages. The components of the web include the <b>client</b> (your computer and browser), the <b>Internet</b>, and <b>servers</b>. The client and servers interact through something called the <b>Hypertext Transfer Protocol (HTTP)</b>.
-    </p>
-    <h1>Basic HTML Elements</h1>
-    <p>
-      <b>HTML elements</b> are what we use to tell a web browser how to display content on a web page.
-      <br>
-      Most HTML elements consist of an <b>opening</b> and a <b>closing</b> tag with some <b>content</b> between them.
-    </p>
-    <h1>HTML Attributes</h1>
-    <p>
-      Some elements accept additional values called <b>attributes</b> in their opening tags. Attributes provide additional information to the browser. For example, the anchor tag takes an attribute called href that defines a URL to link to. 
-    </p>
+    <div>
+      <h1>The World Wide Web</h1>
+      <p>
+        The web is composed largely of <b>HTML</b> documents. HTML stands for <em>HyperText Markup Language</em> and is the language the browsers use to interpret web pages. The components of the web include the <b>client</b> (your computer and browser), the <b>Internet</b>, and <b>servers</b>. The client and servers interact through something called the <b>Hypertext Transfer Protocol (HTTP)</b>.
+      </p>
+    </div>
+    <div>
+      <h1>Basic HTML Elements</h1>
+      <p>
+        <b>HTML elements</b> are what we use to tell a web browser how to display content on a web page.
+        <br>
+        Most HTML elements consist of an <b>opening</b> and a <b>closing</b> tag with some <b>content</b> between them.
+      </p>
+    </div>
+    <div>
+      <h1>HTML Attributes</h1>
+      <p>
+        Some elements accept additional values called <b>attributes</b> in their opening tags. Attributes provide additional information to the browser. For example, the anchor tag takes an attribute called href that defines a URL to link to.
+      </p>
+    </div>
   </body>
 </html>
