--- a/5. project: Memory Game/index.html
+++ b/5. project: Memory Game/index.html
@@ -84,5 +84,16 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/app.js"></script>
+
+    <div id="win" style="display:none;">
+        <div class="overlay"></div>
+        <div class="visible">
+            <div class="content">
+                <p>Congratulations! You Won!</p>
+            </div>
+            <button type="button" onClick="window.location.reload()">Play again</button>
+        </div>
+    </div>
+
 </body>
 </html>
